[gd_scene load_steps=10 format=2]

[ext_resource path="res://Common/Doors/SDoor/yDoor.png" type="Texture" id=1]
[ext_resource path="res://Common/Doors/SDoor/InternalDoor.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 9 )

[node name="InternalDoor" type="StaticBody2D"]
collision_layer = 2
collision_mask = 49
script = ExtResource( 2 )
DoorColor = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 0 )
frames = SubResource( 3 )
animation = "open"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 16, 0 )
collision_layer = 0
collision_mask = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -16, 0 )
shape = SubResource( 5 )

[connection signal="SetClose" from="." to="." method="_on_InternalDoor_SetClose"]
[connection signal="SetOpen" from="." to="." method="_on_InternalDoor_SetOpen"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
